Interface to edit playlist metadata columns and code, behind a separate "edit" button

--- a/src/ui/gtk/css.css
+++ b/src/ui/gtk/css.css
@@ -42,7 +42,10 @@
 #scan_spinner {
     margin-right: 1em;
 }
-box#settings {
+box#settings, box#playlist_editor {
     margin: 4px 8px 4px 8px;
     min-width: 500px;
+}
+box#playlist_editor scrolledwindow#columns {
+    min-height: 200px;
 }
