--- a/src/ui/gtk/css.css
+++ b/src/ui/gtk/css.css
@@ -42,10 +42,15 @@
 #scan_spinner {
     margin-right: 1em;
 }
-box#settings, box#playlist_editor {
+box#settings, window#editor box#buttons, notebook#editor > stack > box {
     margin: 4px 8px 4px 8px;
+}
+window#editor box#buttons {
+    margin-top: 6px;
+}
+box#settings, box#editor {
     min-width: 500px;
 }
-box#playlist_editor scrolledwindow#columns {
+box#editor scrolledwindow#columns {
     min-height: 200px;
 }
