Remove the reundant playlist name field, and move the playlist controls to the bottom. This simultaneously makes the UI more compact and more crowded. (Supporting 640x480 screens out of the box is looking more and more like a pipe dream.)

--- a/src/ui/gtk/css.css
+++ b/src/ui/gtk/css.css
@@ -40,7 +40,7 @@
     min-width: 150px;
 }
 #scan_spinner {
-    margin-right: 1em;
+    margin-left: 1em;
 }
 box#settings, window#editor box#buttons, notebook#editor > stack > box {
     margin: 4px 8px 4px 8px;
